# bragi

./: .gitignore  README.md  pyproject.toml
config/: worldgen.json
docs/: ARCHITECTURE.md
src/story_world/: __init__.py  agents.py  characters.py  cli.py  collector.py  config.py  context.py  generator.py  ids.py  prompts.py  schemas.py  storage.py  story.py  web.py
src/story_world/web_static/: app.js  index.html  styles.css
tests/: test_context.py  test_ids.py  test_prompt_config.py  test_spacetime_storage.py  test_story_flow.py  test_update_cadence.py
