[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "story-agent-project"
version = "0.1.0"
description = "A configurable fictional world generator for downstream story agents."
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
